@@ -1,3 +1,7 @@
+2006-02-02 Jens Tkotz <jens@peino.de> 1.5.2-pl1-cvs-b3
+
+ * Fix: setup/session_test.php didnt work correct with register globals off.
+
 2006-02-02 Jens Tkotz <jens@peino.de> 1.5.2-pl1-cvs-b2
 
 * Fix: "move" and "copy" an item was restricted to admins.
